feat(jobs): create cronjob services to running sweep and watcher with redis and queue

--- a/package.json
+++ b/package.json
@@ -1,29 +1,15 @@
 {
-  "name": "lokapay-monorepo",
-  "module": "index.ts",
-  "type": "module",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "devDependencies": {
-    "@types/bun": "latest",
-    "concurrently": "^9.2.1",
-    "wait-on": "^9.0.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "zod": "^4.1.13"
-  },
   "scripts": {
     "docker:up": "docker-compose up",
-    "dev:api": "wait-on tcp:5433 && bun run --filter \"*api\" dev",  
+    "dev:api": "wait-on tcp:5433 && bun run --filter \"*api\" dev",
     "dev:web": "bun run --filter \"*web\" dev",
+    "dev:worker": "bun run --filter @lokapay/worker dev",
 
-    "clean": "docker-compose down && bun x kill-port 3000 3001 5433", 
+    "clean": "docker-compose down && bun x kill-port 3000 3001 5433 6379",
     "predev": "bun run clean",
-    "dev": "concurrently -k -n \"DB,API,WEB\" -c \"blue,magenta,cyan\" \"bun run docker:up\" \"bun run dev:api\" \"bun run dev:web\""
+    
+    "dev:services": "docker-compose down && bun x kill-port 3000 3001 && concurrently -k -n \"DB,API,WEB\" -c \"blue,magenta,cyan\" \"bun run docker:up\" \"bun run dev:api\" \"bun run dev:web\"",
+    "dev:jobs": "bun run dev:worker",
+    "dev": "concurrently -k -n \"DB,API,WEB,WORKER\" -c \"blue,magenta,cyan,yellow\" \"bun run docker:up\" \"bun run dev:api\" \"bun run dev:web\" \"bun run dev:worker\""
   }
 }
