fix(jobs): update logic to current schema

--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bun run src/index.ts"
+    "dev": "bun --watch src/index.ts"
   },
   "dependencies": {
     "@lokapay/database": "workspace:*",
