--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,9 +22,11 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.5",
     "next-intl": "^4.5.8",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-qr-code": "^2.0.18",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
