--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,9 +4,10 @@
   "main": "index.ts",
   "types": "index.ts",
   "scripts": {
+    "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "generate": "prisma generate"
+    "db:generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0"
