feat(auth): add admin sidebar and modify table to accept admin role

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch index.ts",
+    "db:seed": "bun run ./seed/adminSeed.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
