--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@lokapay/database": "workspace:*",
     "@gelatonetwork/relay-sdk": "^5.6.0",
     "ethers": "^6.15.0",
     "hono": "^4.10.7",
