--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,11 +14,12 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@lokapay/database": "workspace:*",
     "@gelatonetwork/relay-sdk": "^5.6.0",
+    "@lokapay/database": "workspace:*",
     "ethers": "^6.15.0",
     "hono": "^4.10.7",
     "hono-rate-limiter": "^0.4.2",
-    "jose": "^6.1.3"
+    "jose": "^6.1.3",
+    "zod": "^4.3.5"
   }
 }
