--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -9,14 +9,16 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@openzeppelin/contracts": "^5.0.2",
-    "@types/node": "^20.12.7",
+    "@types/node": "^25.0.5",
     "dotenv": "^16.4.5",
     "ethers": "^6.12.0",
     "hardhat": "^2.22.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@gelatonetwork/relay-context": "^4.1.1"
+    "@gelatonetwork/relay-context": "^4.1.1",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@types/mocha": "^10.0.10"
   }
 }
