--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "start": "bun run index.ts",
     "dev": "bun --watch index.ts",
     "db:seed": "bun run ./seed/adminSeed.ts"
   },
