fix(ci): modify filter

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start:api": "bun run --filter \"*api\" start",
     "start:web": "bun run --filter \"*web\" start",
-    "start:worker": "bun run --filter \"*worker\" start",
+    "start:worker": "bun run --filter \"*@lokapay/worker\" start",
 
     "docker:up": "docker-compose up",
     "dev:api": "wait-on tcp:5433 && bun run --filter \"*api\" dev",
