--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "bun run index.ts",
+    "start": "bun run src/index.ts",
     "dev": "bun --watch src/index.ts"
   },
   "dependencies": {
