--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@lokapay/database": "workspace:*",
     "@types/node-cron": "^3.0.11",
+    "axios": "^1.13.3",
     "bullmq": "^5.65.1",
     "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
